fixed the error page problem and the alignment of the form in the weather page

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -329,16 +329,21 @@ header {
 
 .main{
   position: absolute;
-  height: 100%;
+  max-height: 100vh;
   width: 55%;
   display: flex;
   align-items: center;
   flex-direction: column;
   overflow: hidden;
-
+  margin-top: -10rem;
 }
 .main img{
   max-width: 100%;
+}
+@media screen and (max-width:768px){
+  .main{
+    margin-top: 0;
+  }
 }
 @media screen and (max-width:900px){
   .main{
@@ -351,11 +356,10 @@ header {
 .form{
   max-width: 100%;
   position: relative;
-  margin: 6.8rem auto 10rem;
+  margin: 6.8rem 3rem 10rem;
   display: flex;
   z-index: 10000;
-
-  
+  transform: translateX(43px); 
 }
 .form .search-bar{
   width: 35rem;
@@ -367,6 +371,7 @@ header {
   border-radius: 3rem;
   font-size: 1.7rem;
   outline: none;
+  margin: auto;
 }
 .form .submit{
   padding: 1rem 1.5rem;
